Handle YP errors. Use config. Off by default

--- a/config-example.yaml
+++ b/config-example.yaml
@@ -31,3 +31,9 @@ videoSettings:
   streamQualities:
     - medium:
       videoBitrate: 800
+
+# Enable YP to be listed in the Owncast directory and let people discover your instance.
+yp:
+  enabled: true
+  # You must specify the public URL of your host that you want the directory to link to.
+  instanceURL: http://yourhost.com
